--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,5 +7,8 @@
   <body>
     <h1><%= title %></h1>
     <p>Welcome to <%= title %></p>
+
+    <a href="/beers">All Beers</a>
+    <a href="/beers/new">New Beer</a>
   </body>
 </html>
