--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,5 +8,14 @@
     <title><%= title %></title>
 </head>
 <body>
-    
-<main>
+
+ <nav>
+    <a href="/beers" <%- title === 'All Beers' ? 'class="active"' : '' %>>ALL BEERS</a>
+    <% if (user) { %>
+        <a href="/beers/new" <%- title === 'Add Beer' ? 'class="active"' : '' %>>ADD BEER</a>
+        <a href="/logout">LOG OUT</a>
+    <% } else { %>
+        <a href="/auth/google" class="login">LOG IN&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
+    <% } %>
+ </nav>
+   <h1><%= title %></h1>
