--- a/views/beers/index.ejs
+++ b/views/beers/index.ejs
@@ -13,6 +13,7 @@
       <tr>
         <td><%= b.title %></td>
         <td><%= b.beerPercent %></td>
+        <td><%= b.brewery %></td>
         <td><a href="/beers/<%= b._id %>">DETAILS</a></td>
       </tr>
       <% }); %>
