Yayyyyy I got my review update

--- a/views/beers/index.ejs
+++ b/views/beers/index.ejs
@@ -14,7 +14,7 @@
         <td><%= b.title %></td>
         <td><%= b.beerPercent %></td>
         <td><%= b.brewery %></td>
-        <td><a href="/beers/<%= b._id %>">DETAILS</a></td>
+        <td><a href="/beers/<%= b._id %>">Info</a></td>
       </tr>
       <% }); %>
     </tbody>
