--- a/views/beers/show.ejs
+++ b/views/beers/show.ejs
@@ -54,6 +54,10 @@
               <form action="/reviews/<%= r._id %>?_method=DELETE" method="POST">
                 <button type="submit">X</button>
               </form>
+              <form action="/reviews/<%= r._id %>?_method=PUT" method="POST">
+                <input name="content" value="<%= r.content %>">
+                <button type="submit">Edit</button>
+              </form>
             <% } %>
           </td>
         </tr>
