Edit review clear box

--- a/views/beers/show.ejs
+++ b/views/beers/show.ejs
@@ -55,7 +55,7 @@
                 <button type="submit">X</button>
               </form>
               <form action="/reviews/<%= r._id %>?_method=PUT" method="POST">
-                <input name="content" value="<%= r.content %>">
+                <input name="content" value="<%=  %>">
                 <button type="submit">Edit</button>
               </form>
             <% } %>
