--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,17 +4,19 @@
     <title><%= title %></title>
     <link rel='stylesheet' href='/stylesheets/style.css' />
   </head>
-  <body>
+  <body class="center">
     <nav>
-
+      
+      
       <a href="/beers">All Beers</a>
       
       <a href="/auth/google" class="login">Log In&nbsp;<img src="https://i.imgur.com/FHjYyi0.png"></a>
       
     </nav>
-    
-    <h1>Cerveza, Biere, and Beer</h1>
-    <p>Welcome to the ultimate Cerveza reviews page on the web. We offer a wide range of Biere
-      information and reviews from all your favorite breweries. Please signup with your gmail to talk Beer.</p>
+          
+    <h1 class="homeTitle">Cerveza, Biere, and Beer</h1>
+        
+    <p class="siteDescription">Welcome to the ultimate Cerveza reviews page on the web. We offer a wide range of Biere
+      information and reviews. Please signup with your gmail to talk Beer.</p>
   </body>
 </html>
