--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,3 @@
-a {
-  color: #00B7FF;
-}
-
-.login img {
-  height: 15px;
-}
-
 * {
   box-sizing: border-box;
   font-family: Helvetica;
@@ -21,9 +13,10 @@ body {
     "nav"
     "main"
 }
+
 body > nav {
   grid-area: nav;
-  background-color: #B8C0C2;
+  background-color: rgb(136, 161, 114);
   display: flex;
   justify-content: flex-end;
   align-items: center;
@@ -46,7 +39,156 @@ body > main {
   overflow-y: scroll;
 }
 
-body > h1 {
-  text-align: center;
+body > main h1:first-child {
+  margin-bottom: 50px;
+}
 
+nav > a {
+  margin: 20px;
+  text-decoration: none;
+  padding: 10px;
+  border-radius: 5px;
+}
+
+nav > a:hover:not(.active) {
+  color: white;
+  background-color: #424748;
+}
+
+nav > a.active {
+  color: white;
+  cursor: default;
+}
+
+#new-form {
+  display: grid;
+  grid-gap: 10px;
+  grid-template-columns: repeat(2, minmax(auto, 22rem));
+}
+
+#new-form *,
+#add-review-form * {
+  font-size: 20px;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+#new-form input[type="submit"] {
+  grid-column: span 2;
+  width: 10rem;
+  margin-left: auto;
+}
+
+table {
+  font-size: 20px;
+}
+
+table thead th {
+  padding: 5px;
+  border-bottom: 2px solid #424748;
+}
+
+table td {
+  padding: 10px;
+  text-align: center;
+}
+
+#list td:nth-child(2), #list td:nth-child(3){
+  min-width: 100px;
+}
+
+#list a {
+  border-radius: 4px;
+  background-color: #B8C0C2;
+  padding: 4px;
+  text-decoration: none;
+  font-size: 14px;
+}
+
+#list a:hover {
+  background-color: white;
+}
+
+#show-page {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 1rem;
+}
+
+#show-page div:nth-child(even) {
+  font-weight: bold;
+}
+
+#add-review-form {
+  display: grid;
+  grid-template-columns: auto auto;
+  grid-gap: 1rem;
+  margin-bottom: 2rem;
+}
+
+#add-review-form input[type="submit"]  {
+  width: 10rem;
+  grid-column: 2 / 3;
+}
+
+ul {
+  margin: 0 0 1rem;
+  padding: 0;
+  list-style: none;
+}
+	
+li {
+  font-weight: bold;
+}
+
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 34px;
+}
+
+.login img {
+  height: 30px;
+}
+
+.review-user {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.review-user img {
+  border-radius: 50%;
+  height: 40px;
+}
+
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 100%;
+  background-image: url("https://imgur.com/0Z8x7rF.png");
+  background-repeat: repeat;
+  background-size: cover;
+}
+
+.siteDescription {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 40%;
+  width: 75%;
+  font-size: 20px;
+  color: white;
+}
+
+.homeTitle {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 0%;
+  width: 45%;
+  font-size: 50px;
+  color: rgb(119, 56, 56);
 }
