--- a/views/beers/new.ejs
+++ b/views/beers/new.ejs
@@ -13,9 +13,10 @@
         <option value="Porter">Porter</option>
         <option value="Stout">Stout</option>
         <option value="Belgian-Style Ale">Belgian-Style Ale</option>
+        <option value="Sour Ale/Cider">Sour Ale/Cider</option>
     </select>
     <label>Percentage</label>
-    <input type="text" name="beerPercent">
+    <input type="text" name="beerPercent" placeholder="sign not needed">
     <label>Brewery</label>
     <input type="text" name="brewery">
 
